# dart_monty_core

./: .dcm.yaml  .gitignore  .pubignore  AGENTS.md  CHANGELOG.md  README.md  analysis_options.yaml  dart_test.yaml  dcm_options.yaml  ffigen.yaml  llms.txt  mkdocs.yml  pubspec.yaml  requirements-docs.txt
.github/workflows/: ci.yaml  dcm.yaml  deploy-pages.yml  pr-labeler.yml  publish.yaml  trufflehog.yaml  upstream-monty-check.yaml
assets/: .gitignore  dart_monty_core_worker.js
docs/: CONSUMER_MIGRATION.md  index.html
docs/deep-dives/: async-matrix.md
example/: 01_one_shot.dart  02_stateful.dart  03_externals_and_os.dart  04_session.dart  05_repl.dart  06_compile_and_platform.dart  07_all_values.dart  08_all_errors.dart  09_limits_and_code_capture.dart  10_dataclasses.dart  11_print_callback.dart  12_mount_dir.dart  13_type_check.dart  example.dart  pubspec.yaml
hook/: build.dart
js/: build.js  package-lock.json  package.json
js/src/: bridge.js  wasm_glue.js  worker_src.js
lib/: dart_monty_core.dart
lib/assets/: .gitignore  dart_monty_core_bridge.js  dart_monty_core_worker.js
lib/src/: callbacks.dart  externals.dart  monty.dart  monty_factory.dart  monty_factory_native.dart  monty_factory_stub.dart  monty_factory_web.dart  monty_session.dart
native/: Cargo.toml  build.rs  clippy.toml  deny.toml  lcov.info  rust-toolchain.toml
native/.cargo/: config.toml
native/.dart_tool/: native_assets.yaml
native/include/: dart_monty.h
native/src/: convert.rs  error.rs  handle.rs  lib.rs  repl_handle.rs
native/tests/: integration.rs
test/fixtures/: test_cases
test/integration/: _dataclass_hydrate_test_body.dart  _feedrun_async_matrix_body.dart  _fixture_corpus.dart  _fixture_parser.dart  _monty_async_inputs_test_body.dart  _monty_compile_run_test_body.dart  _monty_exec_externals_test_body.dart  _mount_dir_test_body.dart  _oracle_runner.dart  _print_callback_test_body.dart  _repl_extfns_lifecycle_test_body.dart  _repl_futures_test_body.dart  _repl_snapshot_lifecycle_test_body.dart  _run_async_matrix_body.dart  _type_check_test_body.dart  example_smoke_test.dart  ffi_dataclass_hydrate_test.dart  ffi_datetime_oscall_test.dart  ffi_feedrun_async_matrix_test.dart  ffi_monty_async_inputs_test.dart  ffi_monty_compile_run_test.dart  (+35 more)
tool/: gen_fixture_corpus.py  generate_bindings.sh  generate_fixture_corpus.dart  inject_flutter_html.py  install-hooks.sh  pre-commit.sh  prebuild.sh  run_flutter_demo.sh  serve_demo.sh  test_wasm.sh  test_wasm_unit.sh
web/: README.md  dart_monty_bridge.js  repl_demo.dart  repl_demo.dart.js.deps  repl_demo.dart.js.map  repl_demo.mjs  repl_demo.wasm.map
(+75 files in other folders)
