[package]
name = "dart_monty_native"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "dart_monty_native"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
monty = { git = "https://github.com/runyaga/monty.git", branch = "runyaga/0.0.12" }
num-bigint = "0.4"
num-traits = "0.2"
serde_json = "1"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
# Enable all pedantic lints, then allow specific exceptions
pedantic = { level = "warn", priority = -1 }

# Allowances (aligned with upstream pydantic/monty)
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Our additions: FFI crate needs these allowed
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# Extra lints beyond pedantic (from upstream monty + FFI safety)
dbg_macro = "warn"
use_self = "warn"
allow_attributes = "warn"
undocumented_unsafe_blocks = "warn"
redundant_clone = "warn"
multiple_unsafe_ops_per_block = "warn"
or_fun_call = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
