[package]
name = "dart_monty_core_native"
version = "0.0.14"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "oracle"
path = "src/bin/oracle.rs"

[lib]
name = "dart_monty_core_native"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
monty = { git = "https://github.com/pydantic/monty.git", tag = "v0.0.17" }
monty_type_checking = { git = "https://github.com/pydantic/monty.git", tag = "v0.0.17" }
num-bigint = "0.4"
num-traits = "0.2"
serde_json = "1"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
# Enable all pedantic lints, then allow specific exceptions
pedantic = { level = "warn", priority = -1 }

# Allowances (aligned with upstream pydantic/monty)
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
# Our additions: FFI crate needs these allowed
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# Extra lints beyond pedantic (from upstream monty + FFI safety)
dbg_macro = "warn"
use_self = "warn"
allow_attributes = "warn"
undocumented_unsafe_blocks = "warn"
redundant_clone = "warn"
multiple_unsafe_ops_per_block = "warn"
or_fun_call = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
